--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,11 +1,13 @@
+---
 name: build
 
 on:
   push:
-  pull-request:
+  pull_request:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -28,7 +30,8 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  pre-release:
+    name: Pre Release
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -50,6 +53,42 @@ jobs:
         automatic_release_tag: "latest"
         prerelease: true
         title: "Development Build"
+        files: |
+          binarysearch
+          binarysearch.exe
+          scan_folder_for_binary.sh
+          scan_git_repo_for_binary.sh
+
+---
+name: tagged-release
+
+on:
+  push:
+    tags:
+      - "v*"
+
+jobs:
+  tagged-release:
+    name: Tagged Release
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.17
+
+    - name: Build Linux
+      run: GOOS=linux go build -v ./...
+
+    - name: Build Windows
+      run: GOOS=windows go build -v ./...
+    
+    - uses: "marvinpinto/action-automatic-releases@latest"
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        prerelease: false
         files: |
           binarysearch
           binarysearch.exe
