--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         go-version: 1.17
 
     - name: Build Linux
-      run: GOOS=linux go build -v ./...
+      run: GOOS=linux go build -o binarysearch -v .
 
     - name: Build Windows
-      run: GOOS=windows go build -v ./...
+      run: GOOS=windows go build -o binarysearch.exe -v .
