--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -18,10 +18,10 @@ jobs:
         go-version: 1.17
 
     - name: Build Linux
-      run: GOOS=linux go build -v ./...
+      run: GOOS=linux go build -o binarysearch -v .
 
     - name: Build Windows
-      run: GOOS=windows go build -v ./...
+      run: GOOS=windows go build -o binarysearch.exe -v .
     
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
